changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Remove autohook inserted in items, and use was_destroyed() to check item's validity.
 plugins/cfpython/include/cfpython_object.h: keep item's count, change check macros.
 plugins/cfpython/cfpython_map.c: fix wrong EXISTCHECK_INT to MAPEXISTCHECK_INT.
 plugins/cfpython/cfpython_object.c: remove autohook stuff, use item's count.
 plugins/cfpython/cfpython.c: remove autohook handling.
Nicolas Weeger 2008-03-29

Tweak documentation generation.
 doc/playbook/Makefile.am: factorize code to make it easy to generate PDFs,
  fix many pic issues.
 doc/scripts/makeps.pl: add "pdf" output support.
Nicolas Weeger 2008-03-29

Remove unused variable. Use safe string functions.
 server/alchemy.c
Nicolas Weeger 2008-03-29

Use try_find_archetype() instead of find_archetype() and remove the nroferrors
handling.
 random_maps/wall.c
Nicolas Weeger 2008-03-29

Remove unused parameter.
 random_maps/random_map.c rproto.h snake.c square_spiral.c test.c
Nicolas Weeger 2008-03-29

Use StringBuffer to remove static buffers.
 include/sproto.h
 server/c_object.c shop.c
Nicolas Weeger 2008-03-29

Fix accidentally broken connection.
 socket/request.c
Nicolas Weeger 2008-03-29

Remove unused parameter.
 include/sproto.h
 server/spell_effect.c spell_util.c
Nicolas Weeger 2008-03-29

Use safe string functions.
 server/build_map.c
Nicolas Weeger 2008-03-29

Use flags instead of hardcoded values for monster's will_apply.
 include/object.h
 server/monster.c move.c
Nicolas Weeger 2008-03-29

Remove unused return value.
 include/sproto.h
 server/player.c
 socket/request.c
Nicolas Weeger 2008-03-29
